// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <h3
    className="Heading-sc-1jzu9kp-0 HA-dHf"
    color="bulma.100"
    size={16}
  >
    Title
  </h3>
</div>
`;

exports[`Heading renders colors 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <h3
    className="Heading-sc-1jzu9kp-0 fiBKzM"
    color="goku.80"
    size={16}
  >
    Title
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 puHfL"
    color="hit.80"
    size={16}
  >
    Title
  </h3>
</div>
`;

exports[`Heading renders isRegular 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <h3
    className="Heading-sc-1jzu9kp-0 eNYeai"
    color="bulma.100"
    size={16}
  >
    Title
  </h3>
</div>
`;

exports[`Heading renders size 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bcLCto"
    color="bulma.100"
    size={24}
  >
    Title Size
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 MSQQD"
    color="bulma.100"
    size={72}
  >
    Title Size
  </h3>
</div>
`;

exports[`Heading renders text align 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <h3
    className="Heading-sc-1jzu9kp-0 OqhRY"
    color="bulma.100"
    size={16}
  >
    Title
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 jMhTqf"
    color="bulma.100"
    size={16}
  >
    Title
  </h3>
</div>
`;
